<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

        </RadioGroup>

        <TextView
            android:id="@+id/xqTV"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:hint="@string/choose_xq" />

        <TextView
            android:id="@+id/ldTV"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:hint="@string/choose_ld" />

        <TextView
            android:id="@+id/lcTV"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:hint="@string/choose_lc" />

        <EditText
            android:id="@+id/roomET"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:hint="@string/input_room"
            android:singleLine="true" />

        <TextView
            android:id="@+id/elecTV"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:hint="@string/query_elec"
            android:minHeight="40dp" />

        <EditText
            android:id="@+id/priceET"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:hint="@string/input_price"
            android:inputType="number"
            android:singleLine="true" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/payBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/confirm" />

    </LinearLayout>

</androidx.cardview.widget.CardView>